mise à jour rapport reunion 4 + logo

--- a/Rapport_reunion/Rapport_reunion_4.tex
+++ b/Rapport_reunion/Rapport_reunion_4.tex
@@ -39,6 +39,7 @@ Présents à la réunion: Kévin Laoussing, Nicolas Reynaud et Kevin Bascol.
 	\begin{itemize}
 		\item Interface graphique.
 		\item Structure du document de spécification des exigences.
+		\item Logo de l'entreprise
 	\end{itemize}
 
 \subsection*{Bilan du travail}
@@ -50,8 +51,9 @@ Présents à la réunion: Kévin Laoussing, Nicolas Reynaud et Kevin Bascol.
 \subsection*{Décisions de la réunion}
 	\begin{itemize}
 		\item Nous avons dessiné l'esquisse de l'interface graphique.
-		\item Nous avons réparti les exigences de l'interface graphique. Chaque personne écrira les exigences correspondant aux fonctionnalités dont il était responsable, en accord avec l'esquisse.
+		\item Nous avons réparti les exigences de l'interface graphique. Chaque membre écrira les exigences correspondant aux fonctionnalités dont il était responsable, en accord avec l'esquisse.
 		\item Nous avons sélectionné les sous parties que nous allons conserver du modèle de document de spécification des exigences qu'on avait choisit précédemment.
+		\item Nous nous sommes mis d'accord pour adopter un logo que Nicolas Reynaud a fait pour l'entreprise, ce qui donne une touche de réalisme en plus.
 	\end{itemize}
 	
 \subsection*{Prévision du travail}
@@ -65,8 +67,8 @@ Présents à la réunion: Kévin Laoussing, Nicolas Reynaud et Kevin Bascol.
 	
 \subsection*{Remarque}
 \begin{itemize}
-\item Utilisation d'un site de dessin collaboratif dans le but de réfléchir l'interface graphique ensemble. http://flockdraw.com/.
-\item Pour des raisons de disponibilité des membres la réunion a été reportée du 28 octobre au 29 octobre.
+	\item Utilisation du site de dessin collaboratif http://flockdraw.com/ dans le but de réfléchir l'interface graphique ensemble. Le site a été choisi pour la simplicité de son utilisation et sa facilité d'accès.
+	\item Pour des raisons de disponibilité des membres, la réunion a été reportée du 28 octobre au 29 octobre.
 \end{itemize}
 
 \newpage
