mise à jour logo

--- a/Document_des_exigences/Document_des_exigences_V_KB.tex
+++ b/Document_des_exigences/Document_des_exigences_V_KB.tex
@@ -14,7 +14,7 @@
 
 \fancyhead{}
 \fancyfoot{} 
-\lhead{\includegraphics{knkBebeVersion.png} \hspace{0.1cm} Kould Not Konect  \hspace{0.4cm} \vline}
+\lhead{\includegraphics{../Logo/logoKNKMini.jpg} \hspace{0.1cm} Kould Not Konect  \hspace{0.4cm} \vline}
 \chead{Document de Spécification des Exigences}
 \rhead{Kould Not Share}
 \rfoot{\thepage}
@@ -37,7 +37,7 @@
 		\end{minipage} \hfill
 		\begin{minipage}[c]{.20\linewidth}
 			\begin{center}
-				\includegraphics{knk.png}\\
+				\includegraphics{../Logo/logoKNK.jpg}\\
 				{\large Kould Not Konect}
 			\end{center}
 		\end{minipage}
