Ajout partage de fichier

--- a/Document_des_exigences/Document_des_exigences_V_KB.tex
+++ b/Document_des_exigences/Document_des_exigences_V_KB.tex
@@ -190,7 +190,10 @@ Les utilisateurs de notre programme peuvent être des professionnels aguerris co
 	
 \paragraph{Partage de fichiers}
 	\begin{itemize}[label = $\triangleright$]
-		\item \textcolor{red}{NEED TO DO IT}
+		\item Le programme doit partager les sous-dossier à partir de l'endroit où le programme à été lancé.
+		\item Le programme doit pouvoir partager un fichier avec plusieurs personnes.
+		\item \textcolor{red}{Le programme doit pouvoir bloquer l'accès à un sous-dossier d'un dossier partagé. }
+		\item Les fichiers partagés seront stocké sur le serveur.
 	\end{itemize}
 	
 \paragraph{Gestionnaire de comptes utilisateurs}
