--- a/Document_des_exigences/Document_des_exigences_V_KB.tex
+++ b/Document_des_exigences/Document_des_exigences_V_KB.tex
@@ -52,8 +52,19 @@
 		
 		\vfill
 		
+		\begin{tabular}{|c|c|c|}
+			\hline
+			Version & Date & Description\\
+			\hline
+			V.1 & 03/11/14 & Première version des exigences\\
+			\hline
+			 & & \\
+			\hline
+			 & & \\
+			\hline
+		\end{tabular}\\
+		\vspace{1cm}
 		\@author\\
-		\@date 
 		\end{titlepage}
 \makeatother
 \setcounter{secnumdepth}{4}
@@ -70,9 +81,9 @@
 \subsection{Objectif du document}
 Ce document présente les exigences logicielles et matérielles de la version 1.0 du projet Kould Not Share de l'entreprise Kould Not Konnect. Les responsables de ce projet sont Nicolas Reynaud, Kevin Laoussing et Kevin Bascol.
 
-\textcolor{magenta}{\subsection{Portée du document}
+\subsection{Portée du document}
 Le logiciel de client/serveur FTP est un outil permettant à des particuliers ou des entreprises l'échange des données de manière contrôler. Par exemple, chaque utilisateurs propriétaires d'un fichier stocké dans le serveur FTP du logiciel, pourront paramétrer les droits de téléchargements sur ce fichier, et ainsi ils disposeront du pouvoir de restreindre ou d'augmenter l'accessibilité de son fichier...
-}
+
 
 \subsection{Définitions, acronymes et abréviations}
 \begin{description}
@@ -87,32 +98,12 @@ Le logiciel de client/serveur FTP est un outil permettant à des particuliers ou
 
 \subsection{Références}
 
-\textcolor{red}{\subsection{Vue d’ensemble}
-[Cette section décrit le contenu du reste du document et explique comment le document est organisé.]}
 
 \section{Description générale}
 
 Ce projet consiste en la création d'un serveur FTP chez un particulier ou une entreprise, ayant accès à la machine sur laquelle est installé le programme. Les utilisateurs se verront donner l'accès par l'administrateur à certains dossiers de la machine sur laquelle est installé le serveur. Il pourront faire alors des échanges de fichiers dans ces répertoires à l'aide du client FTP.
 
 \subsection{Perspectives du produit}
-
-\textcolor{red}{\subsubsection{Interfaces système}
-[Décrire les interfaces qui permettent la communication avec d’autres systèmes.]}
-
-\textcolor{red}{\subsubsection{Interfaces utilisateurs}
-[Décrire les interfaces utilisateur ou référer au prototype d’interface utilisateur.]}
-
-\textcolor{red}{\subsubsection{Interfaces matérielles}
-[Définir les interfaces entre le logiciel et le matériel, incluant la structure logique, les adresses physiques, le comportement attendu, etc.]}
-
-\textcolor{red}{\subsubsection{Interfaces logicielles}
-[Décrire les interfaces logicielles avec les autres composants du système. Ce peut être des composants achetés. Des composants de d’autres applications qui sont réutilisés ou des composants développés pour des sous-systèmes hors de la protée de la présente SEL et qui interagissent avec le présent système..]}
-
-\textcolor{magenta}{\subsubsection{Interfaces de communication}
-[Décrire les interfaces de communication avec les autres systèmes comme les réseaux locaux, les serveurs distants, etc.]}
-
-\textcolor{red}{\subsubsection{Contraintes de mémoire}
-[Indiquer les besoins en mémoire primaire et secondaire.]}
 
 \subsection{Fonctions du produit}
 \begin{itemize}
@@ -125,9 +116,6 @@ Ce projet consiste en la création d'un serveur FTP chez un particulier ou une e
 Les utilisateurs de notre programme peuvent être des professionnels aguerris comme des utilisateurs néophytes. Il nous faudra donc proposer un programme sûr pour les entreprises mais aussi simple d'utilisation pour le particuliers.
 
 \subsection{Contraintes}
-
-\textcolor{red}{\subsection{Hypothèses et dépendances}
-[Décrire tout élément de faisabilité technique, disponibilité de sous-système ou de composant ou toute autre hypothèse liée au projet de laquelle dépend la viabilité du logiciel.]}
 
 \subsection{Exigences reportées}
 
@@ -634,19 +622,14 @@ Si le client a été auparavant banni par le serveur.
 		\end{itemize}
 	
 
-\textcolor{red}{\subsection{Spécification des cas d’utilisation}
-[Lorsqu’il y a une modélisation par cas d’utilisation, ceux-ci décrivent la majorité des exigences fonctionnelles du système ainsi que certaines exigences non-fonctionnelles. On peut référer au document de Spécification des cas d’utilisation.]}
+\subsection{Spécification des cas d’utilisation}
 
-\textcolor{red}{\subsection{Exigences supplémentaires}
-[Décrire les exigences qui ne sont pas incluses dans les cas d’utilisation ainsi que les exigences non-fonctionnelles. On peut référer au document de Spécifications supplémentaires.]}
 
-\textcolor{red}{\subsubsection{Utilisabilité}
-[Décrire les exigences qui affectent l’utilisabilité comme, par exemple:\\
-•	Le temps de formation nécessaire à un utilisateur normal ou expert avant d’être productif.\\
-•	Les temps d’exécution pour les tâches courantes\\
-•	Les exigences pour satisfaire aux standards d’utilisabilité d’interface graphique de, par exemple, Microsoft.]
-\paragraph{\textless Nom de l’exigence d’utilisabilité 1 \textgreater}
-[Description de l’exigence]}
+\subsubsection{Utilisabilité}
+\begin{itemize}
+	\item Le programme doit avoir une prise en main facile pour que n'importe qui puisse immédiatement comprendre comment se servir des fonctionnalité principales.
+	\item 
+\end{itemize}
 
 \textcolor{red}{\subsubsection{Fiabilité}
 [Décrire les exigences qui affectent la fiabilité comme, par exemple:\\
@@ -680,8 +663,6 @@ Si le client a été auparavant banni par le serveur.
 \item[Langage:] JAVA.
 \item[Outil de developpement:] NetBean.
 \end{description}
-\textcolor{red}{\subsection{\textless Nom de la contrainte de conception 1 \textgreater}
-[Description de l’exigence]}
 
 
 \section{Sécurité}
@@ -693,13 +674,8 @@ Devront se faire de manière sécurisée:
 \end{itemize}
 
 
-
 \section{Exigences de documentation utilisateur et d’aide en ligne}
 Une documentation utilisateur complète doit être fournie avec le programme.
-
-
-\textcolor{red}{\section{Normes applicables}
-[Décrire par référence toutes normes applicables et les sections précises de ces normes qui s’appliquent au système. Cela inclut, par exemple, les normes de qualité, légales ou réglementaire, les normes industrielles d’utilisabilité, l’interopérabilité, les normes d’internationalisation, conformité au système d’exploitation, etc. ]}
 
 
 \section{Classification des exigences fonctionnelles}
